--- a/caderno-de-exercicios/exercicio7/pom.xml
+++ b/caderno-de-exercicios/exercicio7/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.br.exercicio7.Exercicio7</exec.mainClass>
+        <exec.mainClass>com.br.exercicio7.Principal</exec.mainClass>
     </properties>
 </project>
